# MORWiki

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CONFIGURE.md  LICENSE  README.dev.md  README.md  defaults.yaml  noxfile.py  pyproject.toml
demos/: morlab_fetch.py  plate.py  steel_profile.py
docs/: conf.py  configuration.md  developer.md  index.md  installation.md
src/morb_fetch/: __init__.py  __main__.py  _types.py  config.py  examples.py  morlab.py  toolkits.py  utils.py
src/morb_fetch/examples/: __init__.py  database.py  datasets.py  example.py
src/morb_fetch/toolkits/: __init__.py  mmess.py  morlab.py  toolkit.py
src/morwiki/: __init__.py  __main__.py  config.py  examples.py
tests/: test_config.py  test_examples.py
