[project]
name = "morwiki"
version = "0.1.0"
description = "Model Order Reduction Wiki Data downloader"
readme = "README.md"
authors = [
    { name = "MORB Developers and Contributors", email = "morb@listserv.dfn.de" },
]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.30.0",
    "pooch>=1.8.2",
    "pydantic>=2.11.4",
    "pydantic-settings[yaml]>=2.9.1",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[project.scripts]
morwiki = "morwiki:main"

[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest>=6"]
dev = [{ include-group = "test" }]
docs = [
    "sphinx>=7.0",
    "myst_parser>=0.13",
    "sphinx_copybutton",
    "sphinx_autodoc_typehints",
    "furo>=2023.08.17",
]
