[project]
name = "morb_fetch"
version = "0.1.0"
description = "Model Order Reduction Benchmark Data Fetcher"
readme = "README.md"
authors = [
    { name = "MORB Developers and Contributors", email = "morb@listserv.dfn.de" },
]
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "pooch>=1.8.2",
    "pydantic>=2.11.4",
    "pydantic-settings[yaml]>=2.9.1",
    "pymatreader>=1.1.0",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "typing-extensions>=4.13.2",
]

[project.scripts]
morb-fetch = "morb_fetch:main"

[project.urls]
Documentation = "https://morb-fetch.readthedocs.io"
Repository = "https://github.com/mardi4nfdi/morb-fetch"

[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest>=6"]
dev = [{ include-group = "test" }]
docs = [
    "sphinx>=7.0",
    "myst_parser>=0.13",
    "sphinx_copybutton",
    "sphinx_autodoc_typehints",
    "sphinx-rtd-theme>=3.0.2",
]
